Added Cookies and changed Milk to Soy Milk

--- a/grocery.html
+++ b/grocery.html
@@ -8,8 +8,9 @@
     <ul>
       <li>Apples</li>
       <li>Bananas</li>
-      <li>Milk</li>
+      <li>Soy Milk</li>
       <li>Vegetables</li>
+      <li>Coookies</li>
     </ul>
   </body>
 </html>
